--- a/SLE_FB_notebook.ipynb
+++ b/SLE_FB_notebook.ipynb
@@ -262,7 +262,7 @@
     "SLE_FB(size_t n, const vec_real& b, const vec_real& c)\n",
     "```\n",
     "\n",
-    "which is located in file SLE_FB.h. Before calling the enumeration for given n,b and c, one has to initialize matrices $D_0$, $D_1$, $D_2$, etc. This has to done as shown in the example enumerating Hadamard and Chebechev lattice, see main.c."
+    "which is located in file SLE_FB.h. Before calling the enumeration for given n,b and c, one has to initialize matrices $D_0$, $D_1$, $D_2$, etc. This has to done as shown in the example enumerating Hadamard and Chebechev lattice, see main.cpp."
    ]
   },
   {
