--- a/SLE_FB_notebook.ipynb
+++ b/SLE_FB_notebook.ipynb
@@ -51,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Matrices $A_n$ are invertible: \n",
+    "### Matrices $A_n$ are invertible: \n",
     "\n",
     "Indeed, given $x=(x_1,x_2)$ and $b=(b_1,b_2)$ in $\\mathbb R^{2^{n+1}}$, vertical concatenation of $x_1,x_2,b_1,b_2$ which are in $\\mathbb R^{2^{n}}$, then\n",
     "\n",
@@ -60,7 +60,7 @@
     "$$\n",
     "By induction, we can establish invertibility\n",
     "\n",
-    "## Matrices $A_n$ inverses:\n",
+    "### Matrices $A_n$ inverses:\n",
     "\n",
     "The inverses of matrices $A_n$ can be computed by recurrence, $A_0^{-1}=(1)$ and\n",
     "\n",
@@ -76,7 +76,7 @@
     "$$\n",
     "\n",
     "\n",
-    "## Determinants of Matrices $A_n$: \n",
+    "### Determinants of Matrices $A_n$: \n",
     "\n",
     "For $n\\geq0$, \n",
     "\n",
