--- a/SLE_FB_notebook.ipynb
+++ b/SLE_FB_notebook.ipynb
@@ -214,7 +214,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Given $n\\geq0$, let $d=2^n$ and $A_n$ a $d\\times d$ invertible matrix. Given $N$ a scaling factor, we consider the following:\n",
+    "Let $n\\geq0$, $d=2^n$ and $A_n$ a $d\\times d$ invertible matrix. Given $N$ a scaling factor, we consider the following:\n",
     "\n",
     "- First, normalize $A_n$ to have determinant $1/N$, i.e. consider\n",
     "\n",
@@ -237,13 +237,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- **Hadamard lattices**: if we consider $A_n$ corresponding to the $d$-dimensioal Hadamard lattice, then\n",
+    "- **Hadamard lattices**: if we consider $A_n$ corresponding to the $d$-dimensional Hadamard lattice, then\n",
     "\n",
     "$$\n",
     "\\rho = \\frac{N^{1/d}\\sqrt {d}}2\n",
     "$$\n",
     "\n",
-    "- **Chebechev lattices**: if we consider $A_n$ corresponding to the $d$-dimensioal Chebechev lattice, then\n",
+    "- **Chebechev lattices**: if we consider $A_n$ corresponding to the $d$-dimensional Chebechev lattice, then\n",
     "\n",
     "$$\n",
     "\\rho = (N/\\sqrt2)^{1/d}\\sqrt {d/2}\n",
